# examples

./: .gitignore  CMakeLists.txt  README.md
c-tutorial/: 1-hello.c  2-initialize.c  3-pointers.c  4-arrays-pointers.c  5-function-pointers.c  CMakeLists.txt  readme.md
c-tutorial/segments/: CMakeLists.txt  README.md  segmentexample.c
c-tutorial/string_to_char_array/: CMakeLists.txt  string_to_char_array.cpp
dup2/: CMakeLists.txt  README  dup2_example.c
exceptions/: CMakeLists.txt  div_by_zero.c  infinite_loop.c  readme.md  segfault_demo.c  signal_handler.c
fileDescriptors/: CMakeLists.txt  fd_example.c
fileSystemWatch/: CMakeLists.txt  readme  watch.c
filesAndDirs/: CMakeLists.txt  creat.c  delete.c  flock.c  grow.c  opendir.c  readdir.c  readme.md  stat.c  trunc.c
introduction/: CMakeLists.txt  README  cpu.c  io.c  mem.c
kernel_modules/: readme.md
kernel_modules/hello-world/: hello-1.c
kernel_modules/proc_example/: Makefile  proc_rw.c
memorymanagement/: CMakeLists.txt  readme.md
memorymanagement/malloc/: CMakeLists.txt  malloc.c  ownmalloc.c
memorymanagement/mmap_example/: CMakeLists.txt  ReadMe.md  example_mmap.c
mmap_example/: example_mmap.c
mqueue/: mqueue_r.cpp  mqueue_s.cpp  readme.txt
mqueue_with_int/: mqueue_r.cpp  mqueue_s.cpp  readme.txt
pipe/: CMakeLists.txt  pfifo.cpp  popen.cpp
processManagement/: CMakeLists.txt
processManagement/basicexec/: CMakeLists.txt  basicexec.c  input.txt
processManagement/basicexec/tests/: readme.md
processManagement/basicfork/: CMakeLists.txt  basicfork.c
processManagement/basicsignal/: CMakeLists.txt  basicsignal.c
processManagement/basicwait/: CMakeLists.txt  basicwait.c
processManagement/execvpexample/: CMakeLists.txt  execvpexample.c
processManagement/managingChildProcess/: CMakeLists.txt  memoryerror.c  notifychild.c  readme.md
processManagement/sigchld/: CMakeLists.txt  readme.md  sigchld.c
processManagement/sigchld-sa-restart/: CMakeLists.txt  README  sigchld-sigaction-sa-restart.cpp  sigchld-sigaction.cpp
rmi-java/: Client.java  Hello.java  Server.java  readme  runClient.sh  runServer.sh
scheduling/: CMakeLists.txt  README  sched-ex.py  scheduling.c
sharedMemory/: CMakeLists.txt
sharedMemory-2/: CMakeLists.txt  readme.txt  shm_r.cpp  shm_s.cpp
sockets/: CMakeLists.txt  PracticalSocket.cpp  TCPEchoClient.cpp  TCPEchoServer-Thread.cpp  TCPEchoServer.cpp  UDPEchoClient.cpp  UDPEchoServer.cpp  readme.txt
sockets-2/: Makefile  client.c  readme.md  server.c
systemcall/: CMakeLists.txt  README.md  main.cpp
threads/: CMakeLists.txt  readme.md
threads/conditionvariables/: CMakeLists.txt  condvar.c
threads/conditionvariables/basicOutline/: main-join-begin.c  main-join-try1.c  main-join-try2.c  main-join-try3.c  main-join-try4.c
threads/introduction/: CMakeLists.txt  README  main-thread-0.c  main-thread-1.c  main-thread-2.c  main-thread-3.c  main-thread-4.c  main-thread-5.c  main-trace.txt  mythreads.h
threads/pthread_attr_example/: CMakeLists.txt  pthread_attr.c
threads/pthread_join/: CMakeLists.txt  t0.c
threads/pthread_pop/: CMakeLists.txt  pthread_pop_example.c  readme
threads/race_condition/: CMakeLists.txt  basicmutex.c  t1-fix.c  t1.c
threads/semaphore/: CMakeLists.txt  build.sh  shm_consume.cpp  shm_produce.cpp
threads/threadcleanup/: CMakeLists.txt  threadcleanup.cpp
timer/: CMakeLists.txt  gettime.cpp  readme.txt
