cmake_minimum_required (VERSION 2.8.6)
project (examples)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
add_subdirectory(timer)
add_subdirectory(pipe)
add_subdirectory(c-tutorial)
add_subdirectory(scheduling)
add_subdirectory(systemcall)
add_subdirectory(processManagement)
add_subdirectory(threads)
add_subdirectory(fileDescriptors)
add_subdirectory(memorymanagement)
add_subdirectory(sockets)
add_subdirectory(fileSystemWatch)
add_subdirectory(sharedMemory-2)
