cmake_minimum_required(VERSION 2.8)
project(test)
enable_testing()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
set(SOURCE_FILES main.cpp)
add_executable(simple ${SOURCE_FILES})
add_test(execution  strace ${CMAKE_CURRENT_SOURCE_DIR}/bin/simple)