cmake_minimum_required (VERSION 2.8.6)
project (threads)
add_subdirectory(conditionvariables)
add_subdirectory(introduction)
add_subdirectory(pthread_attr_example)
add_subdirectory(pthread_join)
add_subdirectory(pthread_pop)
add_subdirectory(race_condition)
add_subdirectory(semaphore)
add_subdirectory(threadcleanup)
              

