cmake_minimum_required (VERSION 2.6)
project(threads)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11 -g")
add_executable(main-thread-0 main-thread-0.c)
add_executable(main-thread-1 main-thread-1.c)
add_executable(main-thread-2 main-thread-2.c)
add_executable(main-thread-3 main-thread-3.c)
add_executable(main-thread-4 main-thread-4.c)
add_executable(main-thread-5 main-thread-5.c)
target_link_libraries(main-thread-0 pthread)
target_link_libraries(main-thread-1 pthread)
target_link_libraries(main-thread-2 pthread)
target_link_libraries(main-thread-3 pthread)
target_link_libraries(main-thread-4 pthread)
target_link_libraries(main-thread-5 pthread)
