cmake_minimum_required (VERSION 2.6)
project(t1)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11 -g")
add_executable(t1 t1.c)
add_executable(t1-fix t1-fix.c)
add_executable(basicmutex basicmutex.c)
target_link_libraries(t1 pthread)
target_link_libraries(t1-fix pthread)
target_link_libraries(basicmutex pthread)